add line  3 [For rebase ]

--- a/test.html
+++ b/test.html
@@ -9,5 +9,6 @@
 <body>
     <p>For rebase: add label 1</p>
     <p>For rebase: add label 2</p>
+    <p>For rebase: add label 3</p>
 </body>
 </html>
