add line 4 [for rebase]

--- a/test.html
+++ b/test.html
@@ -10,5 +10,6 @@
     <p>For rebase: add label 1</p>
     <p>For rebase: add label 2</p>
     <p>For rebase: add label 3</p>
+    <p>For rebase: add label 4</p>
 </body>
 </html>
