--- a/test.html
+++ b/test.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="content">
+        <div class="form-group">
+            <label for=""></label>
+            <select class="custom-select" name="" id="">
+                <option selected>Select one</option>
+                <option value=""></option>
+                <option value=""></option>
+                <option value=""></option>
+            </select>
+        </div>
+    </div>
 </body>
 </html>
