--- a/home.html
+++ b/home.html
@@ -25,5 +25,12 @@
           </div>
         </div>
     </div>
+    <script>
+      function callAPI(){
+        return {
+          data: []
+        }
+      }
+    </script>
 </body>
 </html>
