--- a/test.html
+++ b/test.html
@@ -15,6 +15,7 @@
                 <option value=""></option>
                 <option value=""></option>
                 <option value=""></option>
+                <option value=""></option>
             </select>
         </div>
     </div>
