--- a/test.html
+++ b/test.html
@@ -16,6 +16,7 @@
                 <option value=""></option>
                 <option value=""></option>
                 <option value=""></option>
+                <option value=""></option>
             </select>
         </div>
     </div>
