add not-tracking file

--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
       function updateDataAfterCallAPI(data){
         const form = document.getElementById("form");
         form.innerHTML = data
-
+//some thing change
       }
     </script>
 </body>
