add UI for test

--- a/test.html
+++ b/test.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="content">
+        <div class="card text-left">
+          <img class="card-img-top" src="holder.js/100px180/" alt="">
+          <div class="card-body">
+            <h4 class="card-title">Title</h4>
+            <p class="card-text">Body</p>
+          </div>
+        </div>
+    </div>
 </body>
 </html>
